Wed Feb 20 19:28:52 2002  Nicola Pero  <nicola@brainstorm.co.uk>

	Moved the memory panel into gnustep-gui so all apps have it.  To
	get the memory panel with new apps click on application icon in
	the info panel (works for any app).
	* MemoryPanel.m: Removed.
	* MemoryPanel.h: Removed.
	* main.m: Do not include MemoryPanel.h.
	(main): Do not add the memory panel submenu.
	* GNUmakefile: Do not compile MemoryPanel.m
	
Wed Jan 16 22:12:24 2002  Nicola Pero  <n.pero@mi.flashnet.it>

	* NSSlider-test/NSSlider-test.m ([-init]): Added enable/disable
	buttons to enable/disable the sliders.
	([-vEnabledChanged:], [-hEnabledChanged:]): New methods

2002-01-09  Adam Fedor  <fedor@gnu.org>

	* main.m (main): Remove main menu display.

Fri Dec 21 14:28:48 2001  Nicola Pero  <nicola@brainstorm.co.uk>

	* KeyboardInput-test/ConvertKeys.m: New file.
	* KeyboardInput-test/ConvertKeys.h: Idem.
	* KeyboardInput-test/GNUmakefile: Compile it.
	* KeyboardInput-test/KeyboardInput-test.m ([InputTestView
	-keyDown:]): Use the new falitites to display pretty names for
	function keys.
	* main.m: Updated version to 0.8.
	
Wed Jul  4 18:41:29 2001  Nicola Pero  <nicola@brainstorm.co.uk>

	* GNUmakefile (SUBPROJECTS), testList.h (testList): Added
	NSTextView-test.
	* NSTextView-test: New directory.
	* NSTextView-test/NSTextView-test.m: New file.
	* NSTextView-test/GNumakefile: New file.
	* main.m: Updated version to 0.7.
	
Sun Jun 10 20:00:51 2001  Nicola Pero  <n.pero@mi.flashnet.it>

	* StringDrawing-test/StringDrawing-test.m
	([-chooseTextFile:sender]): Use an NSOpenPanel rather than a
	NSSavePanel.

Thu Feb  8 19:42:38 2001  Nicola Pero  <n.pero@mi.flashnet.it>

	* GNUmakefile (SUBPROJECTS), testList.h (testList): Added
	NSSecureTextField-test.
	* NSSecureTextField-test: New directory.
	* NSSecureTextField-test/NSSecureTextField-test.m: New file.
	* NSSecureTextField-test/GNUmakefile: New file.
	* main.m: Updated version to 0.6.

Tue Jan 20  Michael Hanni  <mhanni@sprintmail.com>
